[bumpversion]
commit = True
current_version = 0.4.3
files = pytest_aio/__init__.py
tag = True
tag_name = {new_version}
message = build(version): {current_version} -> {new_version}

[wheel]
python-tag = py3

[metadata]
name = pytest-aio
version = attr: pytest_aio.__version__
url = https://github.com/klen/pytest-aio
description = Pytest plugin for testing async python code
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = multipart, http, asyncio, trio, curio
project_urls = 
	Documentation = https://klen.github.io/pytest-aio
	Source code = https://github.com/klen/pytest-aio
	Issue tracker = https://github.com/klen/pytest-aio/issues
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Testing
	Framework :: Pytest

[options]
packages = pytest_aio,
python_requires = >= 3.7
zip_safe = False

[options.package_data]
pytest_aio = 
	py.typed

[options.extras_require]
curio = 
	curio
trio = 
	trio
tests = 
	curio
	pytest
	pytest-mypy
	trio
	hypothesis
	uvloop
build = 
	bump2version
	twine
	wheel
	idna<3

[options.entry_points]
pytest11 = 
	aio = pytest_aio.plugin

[pylama]
ignore = D

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py

[mypy]

[mypy-curio]
ignore_missing_imports = True

[mypy-trio]
ignore_missing_imports = True
